Working on IE fixes.

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -86,7 +86,7 @@ hr { background: #ddd; clear: both; float: none; width: 100%; height: .1em; marg
 ---------------------------------------------------------------------- */
 #footer { border-top: #CCC solid 5px; color: white; font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; margin-bottom: 0; padding: 40px 0; }
 #footer p { margin-bottom: 0.4em; width: 460px; }
-#footer .links { display: block; float: right; margin: 0; width: 45%; }
+#footer .links { display: inline; float: right; margin: 0; width: 45%; }
 #footer p a { margin-right: .2em; }
 #branding-menu strong, #footer strong { color: #fffca9; }
 
